--- a/app/html/mail/forget/forgot.html
+++ b/app/html/mail/forget/forgot.html
@@ -151,7 +151,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
                             <h1 style="font-size: 48px; font-weight: 400; margin: 0;">
-                                Olá, {{user}}
+                                Hi, {{user}}
                             </h1>
                         </td>
                     </tr>
@@ -176,10 +176,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;text-align: center;margin-top: 26px;">
-                                Olha talvez você tenha esquecido sua senha.
-                            </p>
-                            <p style="margin: 0;text-align: center;margin-top: 26px;">
-                                Clique no botão abaixo pra redefinir.
+                                I'm Cheffy this is your token
                             </p>
                         </td>
                     </tr>
@@ -196,15 +193,24 @@
                                     <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
                                         <table border="0" cellspacing="0" cellpadding="0">
                                             <tr>
-                                                <td align="center" style="border-radius: 3px;" bgcolor="#66BB7F">
-                                                    <a
-                                                        href="https://oxigen.club/s/redefinir-senha/{{token}}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #66BB7F; display: inline-block;">Recuperar
-                                                        Senha</a></td>
+                                                <td align="center" style="border-radius: 3px;">
+                                                    <div style="font-size: 32px;font-family: 'Lato', sans-serif;font-weight: 600;color: #66BB7F;letter-spacing: 8px;">
+                                                        {{token}}
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </table>
                                     </td>
                                 </tr>
                             </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left"
+                            style="padding: 0px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;text-align: center;margin-top: 26px;">
+                            Thanks,<br/>The CheffyTeam
+                            </p>
                         </td>
                     </tr>
                 </table>
